--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -4,7 +4,12 @@
     - Use the 'Lato' font family at 18px throughout the body of the document
     - cover background with the "map-bg.jpg" image in the images directory. 
 */
-
+body{
+    font-family: 'Lato';
+    font-size: 18px;
+    background-size: cover;
+    background-image: url('../images/map-bg.jpg');
+}
 nav {
     font-family: sans-serif;
     font-size: 10px;
@@ -21,7 +26,13 @@ nav {
         - set the font size to 45px 
         - set the font color to #5d4037
 */
+h1{
+    font-family: 'Supermercado One';
+    font-size:45px ;
+    color:#5d4037 ;
 
+
+}
 /* 
     Update the following ruleset (#menu) to accomplish the following:
         - Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. 
@@ -30,6 +41,7 @@ nav {
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    column-rule:2px dashed rosybrown ;
 }
 
 section {
@@ -45,12 +57,21 @@ h2 {
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
 */
+#menu{
+    font-variant: small-caps;
+    color:#6d4c41;
+    
+}
 
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
         - Set the font size to 20px
         - Make the font bold
 */
+#menu{
+    font-size: 20px;
+    font-weight: bold;
+}
 
 dd {
     margin: 0 0 12px 0;
@@ -68,6 +89,8 @@ dd {
 */
 
 .price {
+    font-size: large;
+    color: firebrick;
     order: 2;
     padding-left: 10px;
 }
@@ -80,3 +103,6 @@ address {
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
 */
+footer{
+    border-style: 2px dashed;
+}
